# SpectralArchive

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cleanMake.bash  compile.bash  install_cmake_3.22.bash  install_cuda_12.4_on_wsl_ubuntu2204.bash  install_prerequirsites.bash  install_prerequisites.bash  makefile
.github/workflows/: cmake.yml  docker-publish-ubuntu-1804.yml  docker-publish-ubuntu-2004.yml  docker-publish-ubuntu-2204.yml  docker-publish.yml
ArchiveSearch/: CMakeLists.txt  CSocketServer.cpp  CSocketServer.h  CSpectralArchive.cpp  CSpectralArchive.h  CTimerSummary.cpp  CTimerSummary.h  FastCgiInterface.cpp  FastCgiInterface.h  FileUtility.cpp  FileUtility.h  LibSearchEngine.cpp  LibSearchEngine.h  Makefile  ReadMe.md  SearchEngineUsage.md  activiate.puml  archive_reduce.cpp  const_params.h  gzip_github.h  psmvalidator.conf  similarity_gpu_fcgi.cpp  spectralArchive.puml  spectral_similarity_gpu.cpp  spectroscapeMain.cpp  workflow.md
ArchiveSearch/dependentlibs/: CMakeLists.txt  Clustering.cpp  Clustering.h  MzRTMap.cpp  MzRTMap.h  linear_regression.cpp  randomSpecParser.cpp  randomSpecParser.cppcppdependency.puml  randomSpecParser.h
ArchiveSearch/dependentlibs/cudaproj/: CMakeLists.txt  dpcuda  dpcuda.cu  dpcuda.h  dpcuda_main.cu
ArchiveSearch/dependentlibs/msbasic/: BasePSMFeature.cpp  BasePSMFeature.h  CDebugMode.cpp  CDebugMode.h  CFlow.cpp  CFlow.h  CFragScore.cpp  CFragScore.h  CMakeLists.txt  CPeakPair.cpp  CPeakPair.h  CPeakPairsImporter.cpp  CPeakPairsImporter.h  ConcretePSMFeatures.cpp  ConcretePSMFeatures.h  FragmentationScore.cpp  FragmentationScore.h  MGFReader.cpp  MGFReader.h  Makefile  PSMScoreCalculator.cpp  PSMScoreCalculator.h  PeakInfo.cpp  PeakInfo.h  PeakPairScore.cpp  PeakPairScore.h  classifier.cpp  classifier.h  cmake_install.cmake  commonfun.cpp  commonfun.h  gnuplot_functions.cpp  gnuplot_functions.h  liblinearWrapper.cpp  liblinearWrapper.h  peak_annotation.cpp  peak_annotation.h  testCFlow.cpp
ArchiveSearch/dependentlibs/pvalueEstimation/: CLinearRegression.cpp  CLinearRegression.cppcppdependency.puml  CLinearRegression.h  CMakeLists.txt  CTailEstimation.cpp  CTailEstimation.cppcppdependency.puml  CTailEstimation.h  EMAlgorithm.cpp  EMAlgorithm.cppcppdependency.puml  EMAlgorithm.h  Visual.cpp  Visual.cppcppdependency.puml  Visual.h  pvalueCalc.cpp  pvalueCalc.cppcppdependency.puml  pvalueCalc.h
ArchiveSearch/dependentlibs/spectralIndex/: CFaissIndex.cpp  CFaissIndex.cppcppdependency.puml  CFaissIndex.h  CKMeans.cpp  CKMeans.cppcppdependency.puml  CKMeans.h  CMakeLists.txt  CMultiIndices.cpp  CMultiIndices.h  CMyIndex.cpp  CMyIndex.cppcppdependency.puml  CMyIndex.h  GpuResourceObj.cpp  GpuResourceObj.h  ICIndexWrapper.cpp  ICIndexWrapper.cppcppdependency.puml  ICIndexWrapper.h
docker/: clean_docker_cache.bash  update_config_and_create.bash
docker/ubuntu1804/: Dockerfile  create_docker_and_run.bash  log.txt
docker/ubuntu1804bin/: Dockerfile  create_docker_and_run.bash
docker/ubuntu2004/: Dockerfile  create_docker_and_run.bash
docker/ubuntu2204/: Dockerfile  create_docker_and_run.bash
faiss-1.7.1/: CMakeLists.txt
faiss-1.7.1/faiss/gpu/test/: demo_ivfpq_indexing_gpu.cpp
librarymsms/: .gitignore  CAnnotationDB.cpp  CAnnotationDB.h  CArchiveSearchReply.cpp  CArchiveSearchReply.h  CFragmentIndex.cpp  CFragmentIndex.h  CMakeLists.txt  CMzFileReader.cpp  CMzFileReader.h  CPSMAnnotation.cpp  CPSMAnnotation.h  CThreadsPool.cpp  CThreadsPool.h  ConcreteQueries.cpp  ConcreteQueries.h  DatabaseManager.cpp  DatabaseManager.h  GraphKNN.cpp  GraphKNN.h  ICGtInfoUpdate.cpp  ICGtInfoUpdate.h  ICHistdata.cpp  ICHistdata.h  ICMzFile.cpp  ICMzFile.h  ICQuery.cpp  ICQuery.h  Makefile  PeakList.cpp  PeakList.h  ProteomicsDataTypes.cpp  ProteomicsDataTypes.h  SWATHmzXMLReader.cpp  SWATHmzXMLReader.h  SpectraST_base64.cpp  SpectraST_base64.h  SpectraST_cramp.cpp  SpectraST_cramp.hpp  SpectraST_ramp.cpp  (+11 more)
scripts/: start_service.bash  test_versions.bash
tests/: CMakeLists.txt  msmstest.cpp  multiple-threads-usage.cpp
tests/data/: abc.pepidx  abc.spidx  abc.splib  abc.sptxt  example.spectroscape.tsv  iPRG2012_first_3scans.mgf  new_search_result_file_list.txt
